@@ -1,4 +1,5 @@
 3.0.10
+ * Fix potential socket leak (CASSANDRA-12329)
  * Fix ViewTest.testCompaction (CASSANDRA-12789)
  * Improve avg aggregate functions (CASSANDRA-12417)
  * Preserve quoted reserved keyword column names in MV creation (CASSANDRA-11803)
